# regexp-dfa

./: .gitignore  LICENSE  README.md  regexp-dfa.cabal
.github/workflows/: deploy.yml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  regexp-dfa-0.1.0.0-inplace-regexp-dfa-lib.conf
dist-newstyle/tmp/environment.-7276/: .ghc.environment.x86_64-mingw32-9.6.7
src/: BoundedLang.hs  DFA.hs  DFFile.hs  Matcher.hs  NFA.hs  Parser.hs  Parsing.hs  Types.hs  Unparser.hs  Visualise.hs
web/: Main.hs  index.html  main.js  style.css
