cabal-version: 2.4
name:          regexp-dfa
version:       0.1.0.0
build-type:    Simple

common common-opts
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    base      >= 4.14 && < 5,
    containers >= 0.6

library regexp-dfa-lib
  import:          common-opts
  hs-source-dirs:  src
  exposed-modules:
    Parsing
    Types
    Parser
    Unparser
    BoundedLang
    Matcher
    NFA
    DFA
    Visualise
    DFFile

executable regexp-dfa
  import:         common-opts
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  regexp-dfa-lib

executable regexp-dfa-web
  import:         common-opts
  main-is:        Main.hs
  hs-source-dirs: web
  build-depends:  regexp-dfa-lib, ghc-experimental
  ghc-options:    -package ghc-experimental
                  -optl-mexec-model=reactor
                  -optl-Wl,--export=hs_init
  if !arch(wasm32)
    buildable: False
